# Inventory-Management-System

./: Cargo.toml  README.md  inventory_data.json  users.json
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: AddProductForm.tsx  InventoryReport.tsx  LoginForm.tsx  RecordPurchasesForm.tsx  RecordSalesForm.tsx  index.ts
frontend/src/theme/: theme.tsx
src/: app.rs  env.rs  inventory.rs  lib.rs  main.rs  parse_data.rs  transactions.rs  user_auth.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  inventory_data.json  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
