# Root Cargo.toml
[package]
name = "shared"  # Changed from "lib" to avoid confusion
version = "0.1.0"
edition = "2024"

[dependencies]
# Remove tauri and tauri-build from here
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = "1.44.1"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
lazy_static = "1.4"
